--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="#animais">Animais</a></li>
       <li><a href="#faq">Faq</a></li>
       <li><a href="#contato">Contato</a></li>
-      <li><a href="https://www.origamid.com/">Dev →</a></li>
+      <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Dev →</a></li>
     </ul>
   </nav>
   <section class="grid-section animais" id="animais">
